--- a/togetdog_client/public/index.html
+++ b/togetdog_client/public/index.html
@@ -30,6 +30,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2bdb352a301ab515bbdd799f900fbf67
+    "
+    ></script>
+
     <title>ToGetDog</title>
   </head>
   <body>
