S08P12A807-137 #style Feature:front: Map 페이지 주석 수정

--- a/togetdog_client/public/index.html
+++ b/togetdog_client/public/index.html
@@ -32,7 +32,7 @@
     />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2bdb352a301ab515bbdd799f900fbf67
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2bdb352a301ab515bbdd799f900fbf67&libraries=services,clusterer,drawing
     "
     ></script>
 
