S08P12A807-153 #design Feature:front: Walk 페이지 컴포넌트 디자인 수정

--- a/togetdog_client/public/index.html
+++ b/togetdog_client/public/index.html
@@ -30,6 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <title>ToGetDog</title>
   </head>
   <body>
