--- a/togetdog_client/public/index.html
+++ b/togetdog_client/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,8 +28,7 @@
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2bdb352a301ab515bbdd799f900fbf67&libraries=services,clusterer,drawing
-    "
-    ></script>
+    "></script>
 
     <title>ToGetDog</title>
   </head>
