--- a/togetdog_client/public/index.html
+++ b/togetdog_client/public/index.html
@@ -5,9 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app" />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,8 +25,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=2bdb352a301ab515bbdd799f900fbf67&libraries=services,clusterer,drawing
-    "></script>
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_API_KEY%&libraries=services,clusterer,drawing
+    "
+    ></script>
 
     <title>ToGetDog</title>
   </head>
